8323243: JNI invocation of an abstract instance method corrupts the stack

Backport-of: 71d9a83dece7eb4bdb6ffdd9caf14a1348045ce0